# opusfile-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  bach.opus  build.rs  index.html  search-index.js
enum_primitive/: enum.Option.html  index.html  macro.enum_from_primitive!.html  macro.enum_from_primitive_impl!.html  macro.enum_from_primitive_impl_ty!.html  trait.FromPrimitive.html
num/: fn.abs.html  fn.abs_sub.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html
ogg_sys/: fn.ogg_packet_clear.html  fn.ogg_page_bos.html  fn.ogg_page_checksum_set.html  fn.ogg_page_continued.html  fn.ogg_page_eos.html  fn.ogg_page_granulepos.html  fn.ogg_page_packets.html  fn.ogg_page_pageno.html  fn.ogg_page_serialno.html  fn.ogg_page_version.html  fn.ogg_stream_check.html  fn.ogg_stream_clear.html  fn.ogg_stream_destroy.html  fn.ogg_stream_eos.html  fn.ogg_stream_flush.html  fn.ogg_stream_flush_fill.html  fn.ogg_stream_init.html  fn.ogg_stream_iovecin.html  fn.ogg_stream_packetin.html  fn.ogg_stream_packetout.html  fn.ogg_stream_packetpeek.html  fn.ogg_stream_pagein.html  fn.ogg_stream_pageout.html  fn.ogg_stream_pageout_fill.html  fn.ogg_stream_reset.html  fn.ogg_stream_reset_serialno.html  fn.ogg_sync_buffer.html  fn.ogg_sync_check.html  fn.ogg_sync_clear.html  fn.ogg_sync_destroy.html  fn.ogg_sync_init.html  fn.ogg_sync_pageout.html  fn.ogg_sync_pageseek.html  fn.ogg_sync_reset.html  fn.ogg_sync_wrote.html  fn.oggpackB_adv.html  fn.oggpackB_adv1.html  fn.oggpackB_bits.html  fn.oggpackB_bytes.html  fn.oggpackB_get_buffer.html  (+39 more)
opus_sys/: constant.OPUS_BAD_ARG.html  (+99 more)
(+158 files in other folders)
