[package]
name = "opusfile-rs"
version = "0.1.0"
authors = ["Jameson Ernst"]
description = "Rust wrapper for libopusfile"
license = "MIT"

repository = "https://github.com/jpernst/opusfile-rs"
documentation = "http://jpernst.github.io/opusfile-rs"
keywords = ["opus", "codec", "sound", "audio"]

build = "build.rs"
links = "opusfile"


[lib]
name = "opusfile"

[build-dependencies]
pkg-config = "*"

[dependencies]
libc = "*"
enum_primitive = "*"

