[package]
name = "opusfile-rs"
version = "0.1.1"
authors = ["Jameson Ernst"]
description = "Rust wrapper for libopusfile"
license = "MIT"

repository = "https://github.com/jpernst/opusfile-rs"
documentation = "http://jpernst.github.io/opusfile-rs"
keywords = ["opus", "opusfile", "codec", "sound", "audio"]


[lib]
name = "opusfile"

[dependencies]
libc = "*"
enum_primitive = "*"
opusfile-sys = "*"

